# vagrant-python-setup

./: .bash_prompt  .gitignore  README.md  Vagrantfile  auto_activate_.venv.txt  flask_test.py  install.sh  pyproject.toml  test.ipynb  test.py
