[tool.poetry]
name = "vagrant-test"
version = "0.1.0"
description = ""
readme = "README.md"
repository = ""
authors = [
    "Jill Villany <jillian.villany@ibm.com>"
]

[tool.poetry.dependencies]
python = "==3.8.3"
pandas = "^1.4.2"
ipykernel = "^6.13.0"


[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
