[tool.poetry]
name = "vagrant-python-setup"
version = "0.1.0"
description = "This repo is intended to demonstrate an ideal Vagrant VM configuration for Python development"
readme = "README.md"
repository = "https://github.com/jillvillany/vagrant-python-setup"
authors = [
    "Jill Villany <jillvillany@gmail.com>"
]

[tool.poetry.dependencies]
python = "==3.8.3"
pandas = "^1.4.2"
ipykernel = "^6.13.0"
Flask = "^2.1.1"


[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
